# Key-Amount-Extraction-using-SFT-LLM

./: .gitignore  README.md
Annotation from API/: api_client.py  config.py  extraction_service.py  main_runner.py  prompt_manager.py  批量推理.sh
Call for Ollama to annotation/: README.md  config_amount.py  io_utils.py  parser_utils.py  prompt_utils.py  run.sh  run_ollama_amount.py
Quantilize the raw model/: quantize_qwen_gguf_q4km_with_llamacpp.ps1
Segment/: run_partition_yishen.py
data/sft_amount_dataset/20260322_214353/: ambiguous_case_no.jsonl  dataset_for_autodl.jsonl  dataset_for_autodl.txt  invalid_amount.jsonl  stats.json
data/sft_amount_dataset/20260322_215921/: ambiguous_case_no.jsonl  invalid_amount.jsonl  overlength.jsonl  stats.json
data/yishen/2013/: 2013-05.csv
data/yishen_partition/2013/: 2013-05.json
model/Legal-Provisions-Extraction-From-API-to-SFT-Model-Annotation/: .gitignore  README.md
model/Legal-Provisions-Extraction-From-API-to-SFT-Model-Annotation/create train dataset/: api_client.py  config.py  eval_multi_article.py  extraction_service.py  main_runner.py  (+2 more)
model/api_prompt_pipeline/: .gitignore  README.md  requirements.txt
model/judgment_partition_infer/: README.md  infer_cli.py  pyproject.toml  requirements.txt
model/judgment_partition_infer/assets/: model_meta.json  vocab.json
model/judgment_partition_infer/examples/: input.jsonl
model/judgment_partition_infer/src/judgment_partition_infer/: __init__.py  constants.py  infer.py  io.py  model.py  text_utils.py  vocab.py
model/judgment_partition_infer/tests/: smoke_test.py
(+34 files in other folders)
